# rpg

./: .envrc  .envrc-flake-support  .gitignore  Cargo.toml  bootstrap  flake.nix  load_env  readme.md  shell.nix
.vim/: coc-settings.json
nix/: rust.nix
src/: main.rs
src/resources/: one_song.md
