[package]
name = "rpg"
version = "0.1.0"
authors = ["Nathan Shelly <nsnshelly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# https://github.com/rust-lang/cargo/issues/126#issuecomment-98855762
# rspotify = { git = "https://github.com/ramsayleung/rspotify", branch = "master" }
rspotify = { version="0.10" }
tokio = { version = "0.2", features = ["full"] }
